--- a/Views/Estudiantes/Index.cshtml
+++ b/Views/Estudiantes/Index.cshtml
@@ -57,6 +57,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="NotasEstudiante" asp-route-id="@item.Id">Ver Notas</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
